# code-size-benchmarks

./: .gitmodules  .travis.yml  Cargo.toml  README.md  sizes.sh
allocator-system/: Cargo.toml
allocator-system/src/: lib.rs
allocator-wee-alloc/: Cargo.toml  dlmalloc.wasm
allocator-wee-alloc/src/: lib.rs
panic-empty/: Cargo.toml
panic-empty/src/: lib.rs
panic-in-bounds-check/: Cargo.toml
panic-in-bounds-check/src/: lib.rs
panic-in-unwrap/: Cargo.toml
panic-in-unwrap/src/: lib.rs
panic-with-dynamic-message/: Cargo.toml
panic-with-dynamic-message/src/: lib.rs
panic-with-static-message/: Cargo.toml
panic-with-static-message/src/: lib.rs
regular-expressions/: Cargo.toml
regular-expressions/src/: lib.rs
